--- a/index.htm
+++ b/index.htm
@@ -1,2 +1,7 @@
 <!--This is a test-->
 <!--Matty, Southern Illinois University, 22 Jan 2025-->
+
+<head>
+  <title> Your Local Bike Shop
+  </title>
+</head>
