--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,7 @@
-<!--This is a test-->
-<!--Matty, Southern Illinois University, 22 Jan 2025-->
+<!--Matty, Southern Illinois University, Last Developed & Tested 22 Jan 2025-->
 
 <head>
+  <!--Tab Header-->
   <title> Your Local Bike Shop
   </title>
 </head>
