--- a/index.htm
+++ b/index.htm
@@ -1,3 +1,9 @@
 <!-- Matthew C. -->
 <!-- SIU ITEC -->
 <!-- Developed & tested 22 Jan 2025 -->
+
+<head>
+  <!--Tab Header-->
+  <title> Your Favorite Bike Shop
+  </title>
+</head>
