--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,4 @@
-<!-- Matthew C. -->
-<!-- SIU ITEC -->
-<!-- Developed & tested 22 Jan 2025 -->
+<!--Matty, Southern Illinois University, Last Developed & Tested 22 Jan 2025-->
 
 <head>
   <!--Tab Header-->
