--- a/index.htm
+++ b/index.htm
@@ -6,3 +6,22 @@
   <title> Your Best Bike Shop
   </title>
 </head>
+
+<body>
+    <header>
+            <img src="images/IMG_0705.png" alt="WBA Bikes Logo" width="300"> 
+    </header> 
+        <h1>WBA Bikes</h1> 
+        <h2>Your one-stop shop for everything biking.</h2>
+        <p>With a wide variety of brands and accessories, you can find what you want from the largest inventory in Southern Illinois</p>
+  
+        <pre>
+<!--Address for the store-->
+Visit us in person!
+
+WBA Bikes
+360 Flatire Avenue
+Carbondale, IL          
+        </pre>
+</body>
+</html>
