--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-            <img src="images/IMG_0705.png" alt="WBA Bikes Logo" width="300"> 
+            <img src="images/refBIKE.png" alt="WBA Bikes Logo" width="300"> 
     </header> 
         <h1>WBA Bikes</h1> 
         <h2>Your one-stop shop for everything biking.</h2>
