--- a/index.htm
+++ b/index.htm
@@ -1,19 +1,22 @@
-<!--Matty, Southern Illinois University, Last Developed & Tested 22 Jan 2025-->
+<!--Matty, Southern Illinois University, Last Developed & Tested 26 Jan 2025-->
 
 <head>
   <!--Tab Header-->
-
   <title> Your Best Bike Shop
   </title>
 </head>
 
 <body>
     <header>
-            <img src="images/refBIKE.png" alt="WBA Bikes Logo" width="300"> 
+            <img src="images/refBIKE.png" alt="WBA Bikes Logo" width="300"> <!--image for website-->
     </header> 
-        <h1>WBA Bikes</h1> 
-        <h2>Your one-stop shop for everything biking.</h2>
-        <p>With a wide variety of brands and accessories, you can find what you want from the largest inventory in Southern Illinois</p>
+        <h1>WBA Bikes</h1> <!--Business name-->
+        <h2>Your one-stop shop for everything biking!</h2> <!--Business descriptor-->
+        <p>With a wide variety of brands and accessories, you can find what you want from the largest inventory in Southern Illinois.</p>
+
+  
+        <p>Prices are negotiable <em>we will find the best deal for you.</em></p> 
+        <p>If you find a better deal somewhere else, <strong>we'll match it!</strong>.</p> 
   
         <pre>
 <!--Address for the store-->
@@ -21,7 +24,7 @@ Visit us in person!
 
 WBA Bikes
 360 Flatire Avenue
-Carbondale, IL          
+Carbondale, IL 62901         
         </pre>
 </body>
 </html>
