--- a/index.htm
+++ b/index.htm
@@ -15,7 +15,7 @@
         <p>With a wide variety of brands and accessories, you can find what you want from the largest inventory in Southern Illinois.</p>
 
   
-        <p>Prices are always negotiable, <em>we will find the best deal for you.</em></p> 
+        <p>Prices are always negotiable, <strong>we will find the best deal for you!<strong></p> 
         <p>If you find a better deal somewhere else, <strong>WE'LL MATCH IT!</strong>.</p> 
   
         <pre>
