--- a/index.htm
+++ b/index.htm
@@ -1,9 +1,9 @@
 <!--Matty, Southern Illinois University, Last Developed & Tested 26 Jan 2025-->
 
-<head>
-  <!--Tab Header-->
-  <title> Your Best Bike Shop
-  </title>
+<head> <!--Tab Header-->
+  <meta charset="utf-8">
+  <title> WBA Bikes </title>
+  <meta name="description" content="Your Local Bike Shop"> <meta name="keywords" content="WBA, bikes">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         <p>With a wide variety of brands and accessories, you can find what you want from the largest inventory in Southern Illinois.</p>
 
   
-        <p>Prices are always negotiable, <strong>we will find the best deal for you!<strong></p> 
+        <p>Prices are always negotiable, <strong>WE WILL FIND THE BEST DEAL FOR YOU!<strong></p> 
         <p>If you find a better deal somewhere else, <strong>WE'LL MATCH IT!</strong>.</p> 
   
         <pre>
