--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,6 @@
 <!--Matty, Southern Illinois University, Last Developed & Tested 26 Jan 2025-->
 
+<html lang="en-US">
 <head> <!--Tab Header-->
   <meta charset="utf-8">
   <title> WBA Bikes </title>
