--- a/index.htm
+++ b/index.htm
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <!--Matty, Southern Illinois University, Last Developed & Tested 26 Jan 2025-->
 
 <html lang="en-US">
@@ -16,7 +17,7 @@
         <p>With a wide variety of brands and accessories, you can find what you want from the largest inventory in Southern Illinois.</p>
 
   
-        <p>Prices are always negotiable, <strong>WE WILL FIND THE BEST DEAL FOR YOU!<strong></p> 
+        <p>Prices are always negotiable, <strong>WE WILL FIND THE BEST DEAL FOR YOU!<strong>.</p> 
         <p>If you find a better deal somewhere else, <strong>WE'LL MATCH IT!</strong>.</p> 
   
         <pre>
