--- a/Labs/Lab2.html
+++ b/Labs/Lab2.html
@@ -25,7 +25,7 @@
         <a href="emailto:owner@wba.com">owner@wba.com</a> </address> 
   
         <pre>
-<!--Address for the store-->
+<!--Address for store-->
 Visit us in person!
 
 WBA Bikes
