--- a/index.htm
+++ b/index.htm
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<!--Matty, Southern Illinois University, Last Developed & Tested 26 Jan 2025-->
+<!--Matty, Southern Illinois University, Last Developed & Tested 2 Feb 2025-->
 
 <html lang="en-US">
-<head> <!--Tab Header-->
+<head> <!--Heade for tabr-->
   <meta charset="utf-8">
   <title> WBA Bikes </title>
   <meta name="description" content="Your Local Bike Shop"> <meta name="keywords" content="WBA, bikes">
+  <link rel="stylesheet" href="css stuff/bikeshop.css">
 </head>
 
 <body>
@@ -24,7 +25,7 @@
         <a href="emailto:owner@wba.com">owner@wba.com</a> </address> 
   
         <pre>
-<!--Address for the store-->
+<!--Address for store-->
 Visit us in person!
 
 WBA Bikes
