--- a/index_backup.htm
+++ b/index_backup.htm
@@ -2,7 +2,7 @@
 <!--Matty, Southern Illinois University, Last Developed & Tested 2 Feb 2025-->
 
 <html lang="en-US">
-<head> <!--Heade for tabr-->
+<head> <!--Heade for tab-->
   <meta charset="utf-8">
   <title> WBA Bikes </title>
   <meta name="description" content="Your Local Bike Shop"> <meta name="keywords" content="WBA, bikes">
