--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <title> WBA Bikes </title>
   <meta name="description" content="Your Local Bike Shop"> <meta name="keywords" content="WBA, bikes">
-  <link rel="stylesheet" href="css stuff/bikeshop.css">
+  <link rel="stylesheet" href="css stuff/main.css">
 </head>
 
 <body>
