--- a/index.htm
+++ b/index.htm
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<!--Matty, Southern Illinois University, Last Developed & Tested 2 Feb 2025-->
+<!DOCTYPE html>
+<!--Matty, Southern Illinois University, Last Developed & Tested 23 Feb 2025-->
 
 <html lang="en-US">
-<head> <!--Heade for tabr-->
+<head> <!--Heade for tab-->
   <meta charset="utf-8">
   <title> WBA Bikes </title>
   <meta name="description" content="Your Local Bike Shop"> <meta name="keywords" content="WBA, bikes">
-  <link rel="stylesheet" href="css stuff/bikeshop.css">
+  <link rel="stylesheet" href="css_stuff/main.css">
+  <link rel="stylesheet" href="SlickNav-master/SlickNav-master/scss/slicknav.scss">
 </head>
 
 <body>
