--- a/index.htm
+++ b/index.htm
@@ -25,18 +25,18 @@
         <p>Get in touch &amp; Staff:</p> <address>1-618-000-0000<br>
         <a href="emailto:owner@wba.com">owner@wba.com</a> </address>
 
-    <aside>
-			<h2>Guest speakers</h2>
-			<nav id="nav_list">
-				<ul>
-					<li><a href="#"><h3>Sales</h3></a></li>
-					<li><a href="#"><h3>Service</h3></a></li>
-					<li><a href="#"><h3>Contact</h3></a></li>
-					<li><a href="c08x_sampson.html" class="current"><h3>February<br>Scott Sampson</h3></a></li>
-				</ul>
-			</nav>
-			<h3><a href="#">Return to Home page</a></h3>
-		</aside>
+       <aside>
+		<h2>Menu</h2>
+		<nav id="nav_list">
+			<ul>
+				<li><a href="#"><h3>Sales</h3></a></li>
+				<li><a href="#"><h3>Service</h3></a></li>
+				<li><a href="#"><h3>Contact</h3></a></li>
+				<li><a href="c08x_sampson.html" class="current"><h3>February<br>Scott Sampson</h3></a></li>
+			</ul>
+		</nav>
+		<h3><a href="#">Return to Home page</a></h3>
+	</aside>
   
         <pre>
 <!--Address for store-->
