--- a/index.htm
+++ b/index.htm
@@ -23,7 +23,19 @@
         <p>If you find a better deal somewhere else, <strong>WE'LL MATCH IT!</strong>.</p>
 
         <p>Get in touch &amp; Staff:</p> <address>1-618-000-0000<br>
-        <a href="emailto:owner@wba.com">owner@wba.com</a> </address> 
+        <a href="emailto:owner@wba.com">owner@wba.com</a> </address>
+
+       <aside>
+		<h2>Menu</h2>
+		<nav id="nav_list">
+			<ul>
+				<li><a href="#"><h3>Sales</h3></a></li>
+				<li><a href="#"><h3>Service</h3></a></li>
+				<li><a href="#"><h3>Contact</h3></a></li>
+			</ul>
+		</nav>
+		<h3><a href="#">Return to Home page</a></h3>
+	</aside>
   
         <pre>
 <!--Address for store-->
