--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <!--Matty, Southern Illinois University, Last Developed & Tested 23 Feb 2025-->
 
 <html lang="en-US">
@@ -18,14 +18,7 @@
         <h2>Your one-stop shop for everything biking!</h2> <!--Business descriptor-->
         <p>With a wide variety of brands and accessories, you can find what you want from the largest inventory in Southern Illinois.</p>
 
-  
-        <p>Prices are always negotiable, <strong>WE WILL FIND THE BEST DEAL FOR YOU!</strong>.</p> 
-        <p>If you find a better deal somewhere else, <strong>WE'LL MATCH IT!</strong>.</p>
-
-        <p>Get in touch &amp; Staff:</p> <address>1-618-000-0000<br>
-        <a href="emailto:owner@wba.com">owner@wba.com</a> </address>
-
-       <aside>
+	<aside>
 		<h2>Menu</h2>
 		<nav id="nav_list">
 			<ul>
@@ -36,6 +29,13 @@
 		</nav>
 		<h3><a href="#">Return to Home page</a></h3>
 	</aside>
+
+  
+        <p>Prices are always negotiable, <strong>WE WILL FIND THE BEST DEAL FOR YOU!</strong>.</p> 
+        <p>If you find a better deal somewhere else, <strong>WE'LL MATCH IT!</strong>.</p>
+
+        <p>Get in touch &amp; Staff:</p> <address>1-618-000-0000<br>
+        <a href="emailto:owner@wba.com">owner@wba.com</a> </address>
   
         <pre>
 <!--Address for store-->
