--- a/index_backup.htm
+++ b/index_backup.htm
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
-<!--Matty, Southern Illinois University, Last Developed & Tested 2 Feb 2025-->
+!DOCTYPE html>
+<!--Matty, Southern Illinois University, Last Developed & Tested 23 Feb 2025-->
 
 <html lang="en-US">
 <head> <!--Heade for tab-->
   <meta charset="utf-8">
   <title> WBA Bikes </title>
   <meta name="description" content="Your Local Bike Shop"> <meta name="keywords" content="WBA, bikes">
-  <link rel="stylesheet" href="css stuff/bikeshop.css">
+  <link rel="stylesheet" href="css_stuff/main.css">
+  <link rel="stylesheet" href="SlickNav-master/SlickNav-master/scss/slicknav.scss">
 </head>
 
 <body>
@@ -14,15 +15,23 @@
             <img src="images/refBIKE.png" alt="WBA Bikes Logo" width="300"> <!--image for website-->
     </header> 
         <h1>WBA Bikes</h1> <!--Business name-->
-        <h2>Your one-stop shop for everything biking!</h2> <!--Business descriptor-->
-        <p>With a wide variety of brands and accessories, you can find what you want from the largest inventory in Southern Illinois.</p>
+        <h2>Rentals</h2> <!--Business descriptor-->
+        <p>At WBA Bikes, we offer a wide variety of rental options when you need to travel in a pinch.</p>
+        <p>Check out our daily rates for all the hottest models in stock.</p>
+        <p>Try a rental bike to test out. If you like it, we can sell it to you!</p>
 
-  
-        <p>Prices are always negotiable, <strong>WE WILL FIND THE BEST DEAL FOR YOU!</strong>.</p> 
-        <p>If you find a better deal somewhere else, <strong>WE'LL MATCH IT!</strong>.</p>
-
-        <p>Get in touch &amp; Staff:</p> <address>1-618-000-0000<br>
-        <a href="emailto:owner@wba.com">owner@wba.com</a> </address> 
+	<aside>
+		<h2>Menu</h2>
+		<nav id="nav_list">
+			<ul>
+				<li><a href="#"><h3>Sales</h3></a></li>
+				<li><a href="#"><h3>Service</h3></a></li>
+				<li><a href="#"><h3>Contact</h3></a></li>
+				<li><a href="index_backup.htm"><h3>Rentals</h3></a></li>
+			</ul>
+		</nav>
+		<h3><a href="#">Return to Home page</a></h3>
+	</aside>
   
         <pre>
 <!--Address for store-->
