--- a/index.htm
+++ b/index.htm
@@ -25,10 +25,10 @@
 				<li><a href="#"><h3>Sales</h3></a></li>
 				<li><a href="#"><h3>Service</h3></a></li>
 				<li><a href="#"><h3>Contact</h3></a></li>
-				<li><a href="index_backup.htm"><h3>Rentals</h3></a></li>
+				<li><a href="htmls/rentals.htm"><h3>Rentals</h3></a></li>
 			</ul>
 		</nav>
-		<h3><a href="#">Return to Home page</a></h3>
+		<h3><a href="index.htm">Return to Home page</a></h3>
 	</aside>
 
   
