--- a/index_backup.htm
+++ b/index_backup.htm
@@ -30,7 +30,7 @@
 				<li><a href="index_backup.htm"><h3>Rentals</h3></a></li>
 			</ul>
 		</nav>
-		<h3><a href="#">Return to Home page</a></h3>
+		<h3><a href="index.htm">Return to Home page</a></h3>
 	</aside>
   
         <pre>
