--- a/index.htm
+++ b/index.htm
@@ -25,7 +25,7 @@
 				<li><a href="#"><h3>Sales</h3></a></li>
 				<li><a href="#"><h3>Service</h3></a></li>
 				<li><a href="#"><h3>Contact</h3></a></li>
-				<li><a href="htmls/rentals.htm"><h3>Rentals</h3></a></li>
+				<li><a href="index_backup.htm"><h3>Rentals</h3></a></li>
 			</ul>
 		</nav>
 		<h3><a href="index.htm">Return to Home page</a></h3>
