--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,8 @@
 
 <body>
     <header>
-            <img src="images/refBIKE.png" alt="WBA Bikes Logo" width="300"> <!--image for website-->
+            <img src="images/refBIKE.png" alt="WBA Bikes Logo" width="300">
+	    <!--image for website "SOURCE: https://www.mycutegraphics.com/graphics/bicycle/black-white-bicycle.html-->
     </header> 
         <h1>WBA Bikes</h1> <!--Business name-->
         <h2>Your one-stop shop for everything biking!</h2> <!--Business descriptor-->
