--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
   <title> WBA Bikes </title>
   <meta name="description" content="Your Local Bike Shop"> <meta name="keywords" content="WBA, bikes">
   <link rel="stylesheet" href="css_stuff/main.css">
-  <link rel="stylesheet" href="css_stuff/SlickNav-master/scss/slicknav.scss">
+  <link rel="stylesheet" href="css_stuff/slicknav.css">
 </head>
 
 <body>
