--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <title> WBA Bikes </title>
   <meta name="description" content="Your Local Bike Shop"> <meta name="keywords" content="WBA, bikes">
+  <link rel="shortcut icon" href="/images/refBIKE.ico">
   <link rel="stylesheet" href="css_stuff/main.css">
   <link rel="stylesheet" href="css_stuff/slicknav.css">
 </head>
