--- a/index_backup.htm
+++ b/index_backup.htm
@@ -6,8 +6,9 @@
   <meta charset="utf-8">
   <title> WBA Bikes </title>
   <meta name="description" content="Your Local Bike Shop"> <meta name="keywords" content="WBA, bikes">
+  <link rel="shortcut icon" href="/images/refBIKE.ico">
   <link rel="stylesheet" href="css_stuff/main.css">
-  <link rel="stylesheet" href="SlickNav-master/SlickNav-master/scss/slicknav.scss">
+  <link rel="stylesheet" href="css_stuff/slicknav.css">
 </head>
 
 <body>
