--- a/index.htm
+++ b/index.htm
@@ -24,7 +24,7 @@
 		<h2>Menu</h2>
 		<nav id="nav_list">
 			<ul>
-				<li><a sales.htm="#"><h3>Sales</h3></a></li>
+				<li><a href="sales.htm"><h3>Sales</h3></a></li>
 				<li><a href="#"><h3>Service</h3></a></li>
 				<li><a href="#"><h3>Contact</h3></a></li>
 				<li><a href="rentals.htm"><h3>Rentals</h3></a></li>
