--- a/index.htm
+++ b/index.htm
@@ -13,8 +13,13 @@
 
 <body>
     <header>
-            <img src="images/refBIKE.png" alt="WBA Bikes Logo" width="300">
-	    <!--image for website "SOURCE: https://www.mycutegraphics.com/graphics/bicycle/black-white-bicycle.html-->
+        <img src="images/refBIKE.png" alt="WBA Bikes Logo" width="300">
+	<!--image for website "SOURCE: https://www.mycutegraphics.com/graphics/bicycle/black-white-bicycle.html-->
+	<!-- Home audio below)  -->
+        <audio controls autoplay loop hidden>
+           <source src="AV/bell_bike.mp3" type="audio/mpeg">
+		<!-- SOURCE: https://freesound.org/people/stereostereo/sounds/124501/ -->
+        </audio>
     </header> 
         <h1>WBA Bikes</h1> <!--Business name-->
         <h2>Your one-stop shop for everything biking!</h2> <!--Business descriptor-->
