--- a/sales.htm
+++ b/sales.htm
@@ -19,7 +19,7 @@
         <h2>Sales</h2> <!--Business descriptor-->
         <p>If you need a new ride or want to replace your old one. WBA Bikes has a wide variety of new and pre-owned bikes.</p>
         <p>All the hottest models to choose from and all the brands you know and love.</p>
-        <p>Wanna try it before you buy it? check out our <a href="rentals.htm"><h3>Rental Options</h3></a> to test ride your bike</p>
+        <p>Wanna try it before you buy it? Check out our <a href="rentals.htm"> Rental Options</p>
         <p> All prices are negotiable! If we don't have it, we'll find it!</p>
 
 	<aside>
