--- a/sales.htm
+++ b/sales.htm
@@ -9,6 +9,12 @@
   <link rel="shortcut icon" href="/images/refBIKE.ico">
   <link rel="stylesheet" href="css_stuff/main.css">
   <link rel="stylesheet" href="css_stuff/slicknav.css">
+  <script src="JS/jquery.slicknav.js"></script> 
+  <script type="text/javascript"> 
+      $(document).ready(function(){
+          $('#nav_menu').slicknav({prependTo:"#mobile_menu"}); 
+      }); 
+   </script>
 </head>
 
 <body>
