--- a/index.htm
+++ b/index.htm
@@ -19,8 +19,13 @@
 
 <body>
     <header>
-        <img src="images/refBIKE.png" alt="WBA Bikes Logo" width="300">
-	<!--image for website "SOURCE: https://www.mycutegraphics.com/graphics/bicycle/black-white-bicycle.html-->
+	<figcaption>WBA Bikes</figcaption>
+        <figure class="mono">
+        <img class = "mono" src="images/refBIKE.png" alt="WBA Bikes Logo" width="300">
+	<img class="multi" src="images/colorBIKE.png" alt="WBA Bikes Alt Logo" width="300">
+	</figure>
+	<!--images for website "SOURCE: https://www.mycutegraphics.com/graphics/bicycle/black-white-bicycle.html-->
+		<!-- https://www.mycutegraphics.com/graphics/bicycle/red-bicycle.html -->
 	<!-- Home audio below)  -->
         <audio controls autoplay loop hidden>
            <source src="AV/bell_bike.mp3" type="audio/mpeg">
