--- a/rentals.htm
+++ b/rentals.htm
@@ -19,7 +19,13 @@
 
 <body>
     <header>
-            <img src="images/refBIKE.png" alt="WBA Bikes Logo" width="300"> <!--image for website-->
+            <figcaption>WBA Bikes</figcaption>
+        <figure class="mono">
+        <img class ="mono" src="images/refBIKE.png" alt="WBA Bikes Logo" width="300">
+	<img class="multi" src="images/colorBIKE.png" alt="WBA Bikes Alt Logo" width="300">
+	</figure>
+	<!--images for website "SOURCE: https://www.mycutegraphics.com/graphics/bicycle/black-white-bicycle.html-->
+		<!-- https://www.mycutegraphics.com/graphics/bicycle/red-bicycle.html -->
     </header> 
         <h1>WBA Bikes</h1> <!--Business name-->
         <h2>Rentals</h2> <!--Business descriptor-->
