--- a/rentals.htm
+++ b/rentals.htm
@@ -19,10 +19,9 @@
 
 <body>
     <header>
-            <figcaption>WBA Bikes</figcaption>
         <figure class="mono">
-        <img class ="mono" src="images/refBIKE.png" alt="WBA Bikes Logo" width="300">
-	<img class="multi" src="images/colorBIKE.png" alt="WBA Bikes Alt Logo" width="300">
+        <img class="mono" src="images/refBIKE.png" alt="WBA Bikes Logo" width="300"/>
+	<img class="multi" src="images/colorBIKE.png" alt="WBA Bikes Alt Logo" width="300"/>
 	</figure>
 	<!--images for website "SOURCE: https://www.mycutegraphics.com/graphics/bicycle/black-white-bicycle.html-->
 		<!-- https://www.mycutegraphics.com/graphics/bicycle/red-bicycle.html -->
