--- a/sales.htm
+++ b/sales.htm
@@ -33,6 +33,11 @@
         <p> All prices are negotiable! If we don't have it, we'll find it!</p>
 	<p>Wanna try it before you buy it? Check out our <a href="rentals.htm"> Rental Options</p>
 
+	<embed 
+                autoplay="true"
+                type="video/mp4"
+                src="AV/low.mp4" width="250" height="370">
+
 	<aside>
 		<h2>Menu</h2>
 		<nav id="nav_list">
