--- a/index.htm
+++ b/index.htm
@@ -51,6 +51,7 @@
   
         <p>Prices are always negotiable, <strong>WE WILL FIND THE BEST DEAL FOR YOU!</strong>.</p> 
         <p>If you find a better deal somewhere else, <strong>WE'LL MATCH IT!</strong>.</p>
+	<img src=images/thumb.jpg width=100>
 
         <p>Get in touch &amp; Staff:</p> <address>1-618-000-0000<br>
         <a href="emailto:owner@wba.com">owner@wba.com</a> </address>
