--- a/index.htm
+++ b/index.htm
@@ -26,7 +26,7 @@
 	<!--images for website "SOURCE: https://www.mycutegraphics.com/graphics/bicycle/black-white-bicycle.html-->
 		<!-- https://www.mycutegraphics.com/graphics/bicycle/red-bicycle.html -->
 	<!-- Home audio below)  -->
-        <audio controls autoplay loop hidden>
+        <audio controls autoplay>
            <source src="AV/bell_bike.mp3" type="audio/mpeg">
 		<!-- SOURCE: https://freesound.org/people/stereostereo/sounds/124501/ -->
         </audio>
