--- a/service.htm
+++ b/service.htm
@@ -1,1 +1,149 @@
+<!DOCTYPE html>
+<!--Matty, Southern Illinois University, Last Developed & Tested 18 Mar 2025-->
 
+<html lang="en-US">
+<head> <!--Heade for tab-->
+  <meta charset="utf-8">
+  <title> WBA Bikes </title>
+  <meta name="description" content="Your Local Bike Shop"> <meta name="keywords" content="WBA, bikes">
+  <link rel="shortcut icon" href="/images/refBIKE.ico">
+  <link rel="stylesheet" href="css_stuff/main.css">
+  <link rel="stylesheet" href="css_stuff/slicknav.css">
+  <script src="JS/jquery.slicknav.js"></script> 
+  <script type="text/javascript"> 
+      $(document).ready(function(){
+          $('#nav_menu').slicknav({prependTo:"#mobile_menu"}); 
+      }); 
+   </script>
+</head>
+
+<body>
+    <header>
+        <figure class="mono">
+        <img class = "mono" src="images/refBIKE.png" alt="WBA Bikes Logo" width="300"/>
+	<img class="multi" src="images/colorBIKE.png" alt="WBA Bikes Alt Logo" width="300"/>
+	</figure>
+	<!--images for website "SOURCE: https://www.mycutegraphics.com/graphics/bicycle/black-white-bicycle.html-->
+		<!-- https://www.mycutegraphics.com/graphics/bicycle/red-bicycle.html -->
+    </header> 
+        <h1>WBA Bikes</h1> <!--Business name-->
+        <h2>Service</h2> <!--Business descriptor-->
+        <p>At WBA Bikes, we not only sell you your sweet ride. We also stand by you to make sure your bike is in tip-top shape for when you need it most
+          We offer a wide variety of services to help maintain your ride. WBA's service department is one of the best around and has all the parts to 
+          repair or maintain your ride!</p>
+        <p>See from our service catalog of parts and services we provide</p>
+    <section>
+			<figure>
+				<figcaption>Service Table</figcaption>
+				<table>
+					<thead>
+          <thead>
+							<th class="left">Category</th>
+							<th class="left">Job</th>
+              <th class="left">Parts</th>
+							<th class="left">Options</th>
+              <th class="right">Cost</th>
+							<th class="right">Membership Discounts</th>
+						</tr>
+					</thead>
+            <tbody>
+						<tr>
+							<th rowspan="6" class="left">Maintenance</th>
+							<td>Tires</td>
+							<td>Street Standard</td>
+              <td>one pair</td>
+              <td class="right">$</td>
+							<td class="right">WBA Prostar</td>
+						</tr>
+              <tr>
+              <td>Tires</td>
+							<td>Street Premium</td>
+							<td>one pair</td>
+              <td class="right">$$</td>
+							<td class="right">WBA Prostar</td>
+						</tr>
+              <tr>
+              <td>Tires</td>
+							<td>Mountain Standard</td>
+							<td>one pair</td>
+              <td class="right">$$</td>
+							<td class="right">WBA Prostar, WBA Crosscountry</td>
+						</tr>
+              <tr>
+              <td>Tires</td>
+							<td>Mountain Premium</td>
+							<td>one pair</td>
+              <td class="right">$$$</td>
+							<td class="right">WBA Prostar, WBA Crosscountry</td>
+              </tr>
+              <tr>
+              <td>Tires</td>
+							<td>Quickspeed Champion</td>
+							<td>one pair</td>
+              <td class="right">$$$</td>
+							<td class="right">WBA Prostar, WBA Crosscountry</td>
+						</tr>
+              <tr>
+              <td>Chain</td>
+							<td>OEM Chain</td>
+							<td>one chain</td>
+              <td class="right">$</td>
+							<td class="right">WBA Prostar, WBA Quikfix</td>
+              <tr>
+              <td>Wheel</td>
+							<td>OEM Wheels</td>
+							<td>one pair</td>
+              <td class="right">$$</td>
+							<td class="right">WBA Prostar, WBA Quikfix</td>
+              </tr>
+              <tr>
+              <th rowspan="6" class="left">Assistance</th>
+              <td>Lubrication</td>
+							<td>WBA Chain Champ</td>
+              <td>N/A</td>
+              <td class="right">$</td>
+							<td class="right">WBA Prostar</td>
+              </tr>
+              <tr>
+              <td>Lubrication</td>
+							<td>WBA Wheel Works</td>
+              <td>N/A</td>
+              <td class="right">$</td>
+							<td class="right">WBA Prostar</td>
+              </tr>
+              <tr>
+              <td>Air</td>
+							<td>WBA Tire Refill</td>
+              <td>N/A</td>
+              <td class="right">$</td>
+							<td class="right">WBA Prostar</td>
+              </tr>
+              </tbody>
+				</table>
+			</figure>
+		  </section>
+
+
+	<aside>
+		<h2>Menu</h2>
+		<nav id="nav_list">
+			<ul>
+				<li><a href="sales.htm"><h3>Sales</h3></a></li>
+				<li><a href="service.htm"><h3>Service</h3></a></li>
+				<li><a href="#"><h3>Contact</h3></a></li>
+				<li><a href="rentals.htm"><h3>Rentals</h3></a></li>
+			</ul>
+		</nav>
+		<h3><a href="index.htm">Return to Home page</a></h3>
+	</aside>
+  
+        <pre>
+<!--Address for store-->
+Visit us in person!
+
+WBA Bikes
+360 Flatire Avenue
+Carbondale, IL 62901         
+        </pre>
+</body>
+</html>
