--- a/sales.htm
+++ b/sales.htm
@@ -43,7 +43,7 @@
 		<nav id="nav_list">
 			<ul>
 				<li><a href="sales.htm"><h3>Sales</h3></a></li>
-				<li><a href="#"><h3>Service</h3></a></li>
+				<li><a href="service.htm"><h3>Service</h3></a></li>
 				<li><a href="#"><h3>Contact</h3></a></li>
 				<li><a href="rentals.htm"><h3>Rentals</h3></a></li>
 			</ul>
