--- a/service.htm
+++ b/service.htm
@@ -120,6 +120,12 @@
 		<td class="right">WBA Prostar</td>
               </tr>
               </tbody>
+		   <tfoot>
+			<tr>
+			  <th class="left">Others Services</th>
+			  <td></td><td></td><td>please call for more info</td><td></td><td></td>
+			</tr>
+		   </tfoot>
 	      </table>
 	      </figure>
 	 </section>
