--- a/rentals.htm
+++ b/rentals.htm
@@ -28,7 +28,7 @@
     </header> 
         <h1>WBA Bikes</h1> <!--Business name-->
         <h2>Rentals</h2> <!--Business descriptor-->
-        <p>At WBA Bikes, we offer a wide variety of rental options when you need to travel in a pinch.</p>
+        <p>At WBA Bikes, we offer various rental options when you need to travel in a pinch.</p>
         <p>Check out our daily rates for all the hottest models in stock.</p>
         <p>Try a rental bike to test out. If you like it, we can sell it to you!</p>
 
@@ -38,7 +38,7 @@
 			<ul>
 				<li><a href="sales.htm"><h3>Sales</h3></a></li>
 				<li><a href="service.htm"><h3>Service</h3></a></li>
-				<li><a href="#"><h3>Contact</h3></a></li>
+				<li><a href="contact.htm"><h3>Contact</h3></a></li>
 				<li><a href="rentals.htm"><h3>Rentals</h3></a></li>
 			</ul>
 		</nav>
