--- a/sales.htm
+++ b/sales.htm
@@ -44,7 +44,7 @@
 			<ul>
 				<li><a href="sales.htm"><h3>Sales</h3></a></li>
 				<li><a href="service.htm"><h3>Service</h3></a></li>
-				<li><a href="#"><h3>Contact</h3></a></li>
+				<li><a href="contact.htm"><h3>Contact</h3></a></li>
 				<li><a href="rentals.htm"><h3>Rentals</h3></a></li>
 			</ul>
 		</nav>
