--- a/contact.htm
+++ b/contact.htm
@@ -28,7 +28,16 @@
     </header> 
         <h1>WBA Bikes</h1> <!--Business name-->
         <h2>Contact</h2> <!--Business descriptor-->
-        <p>If you have any queries, please fill out our contact form.</p>
+        <h3>If you have any queries, please fill out our contact form.</h3>
+
+	<form name="myform" action="survey_data.html" method="get">
+	<h2>Contact information</h2>
+	<label for="email">Email address:</label>
+    <input type="email" name="email" id="email" autofocus required><br>
+    <label for="firstname">First name:</label>
+    <input type="text" name="firstname" id="firstname" required><br>
+    <label for="lastname">Last name:</label>
+    <input type="text" name="lastname" id="lastname" required><br>
 
 	<aside>
 		<h2>Menu</h2>
