--- a/contact.htm
+++ b/contact.htm
@@ -30,14 +30,49 @@
         <h2>Contact</h2> <!--Business descriptor-->
         <h3>If you have any queries, please fill out our contact form.</h3>
 
-	<form name="myform" action="survey_data.html" method="get">
+	<form name="conform" action="contact_form.html" method="get">
+		
 	<h2>Contact information</h2>
-	<label for="email">Email address:</label>
-    <input type="email" name="email" id="email" autofocus required><br>
-    <label for="firstname">First name:</label>
-    <input type="text" name="firstname" id="firstname" required><br>
-    <label for="lastname">Last name:</label>
-    <input type="text" name="lastname" id="lastname" required><br>
+	<label for="email">Email:</label>
+   	<input type="email" name="email" id="email" autofocus required><br>
+    	<label for="password">Password:</label>
+    	<input type="password" name="password" id="password" required><br>
+    	<label for="name">Full Name:</label>
+    	<input type="text" name="name" id="name" required><br>
+	<label for="address">Address:</label>
+    	<input type="text" name="address" id="address" required><br>
+	<label for="city">City:</label>
+    	<input type="text" name="city" id="city" required><br>
+	<label for="state">State:</label>
+	<input type="text" name="state" required placeholder="Two characters"
+		pattern="[A-Za-z]{2}" title="Must be 2 characters"><br>
+	<label for="zip">Zip Code:</label>
+	<input type="text" name="zip" required placeholder="Five digits"
+		pattern="\d{5}" title="Must be 5 digits"><br>
+	<label for="phone">Phone Number:</label>
+	<input type="tel" name="phone" id="phone" required><br><br>
+	<label for="date">Date:&nbsp;&nbsp;</label>
+	<input type="date" id="date"><br>
+	<h2>Reason For Contact?</h2>
+	<input type="checkbox" name="appointments" id="appointments" value="appointments">
+	<label for="appointments">To Schedule an Appointment:</label>
+	<input type="checkbox" name="question" id="question" value="question">
+	<label for="question">I Have a Question:</label><br>
+	<input type="checkbox" name="sale" id="sale" value="sale">
+	<label for="sale">I'm Looking to Buy/Rent:</label>
+	<h2>Any Specific Thing We Can Help With?</h2>
+	<input type="checkbox" name="bike" id="bike" value="bike">
+	<label for="bike">My Bike:</label>
+	<input type="checkbox" name="appoint" id="appoint" value="appoint">
+	<label for="appoint">An Appointment:</label><br>
+	<input type="checkbox" name="maintain" id="maintain" value="maintain">
+	<label for="maintain">Maintenance:</label>
+
+	<h2>Thank you for taking our survey!</h2>
+    	<input type="submit" name="register" id="button" value="Submit">
+    	<input type="reset" name="reset" id="reset"> 
+
+	</form>
 
 	<aside>
 		<h2>Menu</h2>
