--- a/contact.htm
+++ b/contact.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--Matty, Southern Illinois University, Last Developed & Tested 18 Mar 2025-->
+<!--Matty, Southern Illinois University, Last Developed & Tested 1 Apr 2025-->
 
 <html lang="en-US">
 <head> <!--Heade for tab-->
@@ -35,6 +35,8 @@
 	<h2>Contact information</h2>
 	<label for="email">Email:</label>
    	<input type="email" name="email" id="email" autofocus required><br>
+	<!--! WARNING REVIEWEES: This is for reference only. Do not input actual passwords
+		or information beyond this point -->
     	<label for="password">Password:</label>
     	<input type="password" name="password" id="password" required><br>
     	<label for="name">Full Name:</label>
