--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <script type="text/javascript">
         $(document).ready(function(){
                 $('#nav_menu').slicknav({prependTo:"#mobile_menu"}); 
-            }); 
-    </script>
+            }); </script>
 </head>
 <body>
     <header>
