--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <img src="images/titlepage.png" alt="Scribbly Arts" width="500" height="120" class="center">
+    <title><img src="images/titlepage.png" alt="Scribbly Arts" width="500" height="120" class="center"></title>
     <link rel="shortcut icon" href="images/art1.ico">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/slicknav.css">
