--- a/communicate.html
+++ b/communicate.html
@@ -38,8 +38,8 @@
             <li>special commission request</li>
             <li>whatever you like!</li>
         </ul>
-        <form id= "post" action="success.html"> 
-        <label for="email">E-Mail:</label> 
+        <form id="post" action="success.html"> 
+        <label for="email">email:</label> 
         <input type="email" name="email" id="email" required placeholder="Email" required><br> 
         <label for="first_name">First Name:</label> 
         <input type="text" name="first_name" id="first_name" required minlength="3" maxlength="25" placeholder="Full Name"><br>
