--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><img src="images/titlepage.png" alt="Scribbly Arts" width="500" height="120" class="center"></title>
+    <title>Scribbly Arts</title>
+    <img src="images/titlepage.png" alt="Scribbly Arts" width="500" height="120" class="center">
     <link rel="shortcut icon" href="images/art1.ico">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/slicknav.css">
@@ -26,13 +27,13 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="commissions.html">Commissions</a></li>
-                <li><a href="communicate.html">Conmmunicate</a></li>
+                <li><a href="communicate.html">Communicate</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <h2>Welcome to Scribbly Arts: The Home of Stuff</h2>
-        <p style=>Where our goal is to provide you with as many poorly drawn doodles as your heart desires.</p>
+        <p>Where our goal is to provide you with as many poorly drawn doodles as your heart desires.</p>
         <img src="images/art1.png" width="200" height="200">
         <section class="bg-gradient-to-br from-green-100 to-blue-200 py-16 px-6 text-center">
             <div class="max-w-3xl mx-auto">
@@ -45,12 +46,13 @@
                 The world is our canvas</h3>
                 <p>We have generously provided a table for some base doodles we have as well as a list for some pricing below for styles.</p>
                 <table align="center">
-                    <legend></legend>
+                    <thread>
                         <tr>
                         <th>   Themes   </th>
                         <th>   Description   </th> 
                         <th>   Cost   </th>   
                         <tr>
+                    </thread>
                         <td>   Animals & Creatures   </td> 
                         <td>   Look at the little guy   </td> 
                         <td>   $2   </td>
@@ -71,7 +73,10 @@
                 </table>
                 <p></p>
             </div>
-            <embed autoplay="true" type="video/mp4" src="videos/promo.mp4" width="640" height="400">
+            <video autoplay controls width="640" height="400">
+              <source src="videos/promo.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+            </video>
           </section>
     </main>
     <footer>
