--- a/commissions.html
+++ b/commissions.html
@@ -5,11 +5,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <img src="images/titlepage.png" alt="Scribbly Arts" width="500" height="120" class="center">
+    <title>Scribbly Arts Commissions</title>
     <link rel="shortcut icon" href="images/art1.ico">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/slicknav.css">
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> <script src="js/jquery.slicknav.min.js"></script> 
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="js/jquery.slicknav.min.js"></script> 
     <script type="text/javascript">
         $(document).ready(function(){
                 $('#nav_menu').slicknav({prependTo:"#mobile_menu"}); 
@@ -18,6 +19,7 @@
 </head>
 <body style="background-color:rgb(57, 0, 69);">
     <header>
+        <img src="images/titlepage.png" alt="Scribbly Arts" width="500" height="120" class="center">
         <nav id="mobile_menu"></nav>
         <nav id="nav_menu">
             <ul>
@@ -25,7 +27,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="commissions.html" class="current">Commissions</a></li>
-                <li><a href="communicate.html">Conmmunicate</a></li>
+                <li><a href="communicate.html">Communicate</a></li>
             </ul>
         </nav>
     </header>
