--- a/success.html
+++ b/success.html
@@ -5,19 +5,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <img src="images/titlepage.png" alt="Scribbly Arts" width="500" height="120" class="center">
+    <title>Scribbly Arts Success</title>
     <link rel="shortcut icon" href="images/art1.ico">
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/slicknav.css">
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> <script src="js/jquery.slicknav.min.js"></script> 
-    <script type="text/javascript">
-        $(document).ready(function(){
-                $('#nav_menu').slicknav({prependTo:"#mobile_menu"}); 
-            }); 
-    </script>
 </head>
 <body style="background-color:rgb(57, 0, 69);">
     <header>
+        <img src="images/titlepage.png" alt="Scribbly Arts" width="500" height="120" class="center">
     </header>
     <main>
     <h1>Congrats!</h1>
